<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_gravity="center"
    android:background="@color/morado">



        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/tienda01"/>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/idLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/vResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"

            android:textSize="30dp">
        </TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/txtUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorHint"
            android:background="@drawable/style_border"
            android:hint="@string/hint_username"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:focusable="true"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorHint"
            android:background="@drawable/style_border"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:textColor="@color/white"

            android:layout_margin="5dp"/>
        <CheckBox
            android:id="@+id/chRobot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_robot"
            android:background="@drawable/style_border"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/ingreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:font="@font/lobster_italic"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/text_login"
            android:layout_margin="10dp"
            />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            />


    </LinearLayout>








</LinearLayout>